# Q3CIBC

./: .gitignore  README.md  analyze_langevin_numerically.py  analyze_langevin_trajectory.py  bench_inference.py  bench_inference_particle16.py  bench_inference_pen.py  bench_inference_pixels.py  combined_training.py  combinedv2_cpascounter_training.py  combinedv2_training.py  combinedv3_bestqvaluemse_training.py  combinedv3_training.py  config.json  datasets.py  diagnostic_q_importance.py  diffusion_policy_training.py  direct_training.py  error_log  eval_dfo_sweep.py  handoff.md  hyperparam_search.py  hyperparam_search_dfo.py  hyperparam_search_dp.py  hyperparams_dfo.sh  ibc_with_cps_training.py  ibc_with_cpsv2_training.py  inspect_env.py  joint_training.py  loss.py  main.py  models.py  mse_training.py  normalizations.py  pyproject.toml  run_dfo_quick_experiments.py  run_diagnostic_for_checkpoint.sh  slurm-7927048.out  slurm-7927952.out  slurm-7928652.out  (+52 more)
batches/: AA.txt  Astandardlibero.txt  BB.txt  CC.txt  DD.txt  EE.txt  FF.txt  GG.txt  HH.txt  O.txt  Q.txt  R.txt  T.txt  U.txt  V.txt  W.txt  X.txt  Y.txt  Z.txt  doorA.txt  doorAibc.txt  doorB.txt  doorC.txt  kcA.txt  kcAibc.txt  kcB.txt  kcBibc.txt  kcC.txt  kcD.txt  liberoGoalA.txt  liberoGoalAibc.txt  penA.txt  penAibc.txt  penAibc_reeval.txt  penB.txt  penC.txt  penD.txt  penE.txt  penF.txt  penFlangevin.txt  (+23 more)
checkpoints/: control_point_generator.pt  control_point_generator_step_10000.pt  control_point_generator_step_100000.pt  control_point_generator_step_15000.pt  control_point_generator_step_20000.pt  control_point_generator_step_25000.pt  control_point_generator_step_30000.pt  control_point_generator_step_35000.pt  control_point_generator_step_40000.pt  control_point_generator_step_45000.pt  control_point_generator_step_5000.pt  control_point_generator_step_50000.pt  control_point_generator_step_55000.pt  control_point_generator_step_60000.pt  control_point_generator_step_65000.pt  control_point_generator_step_70000.pt  control_point_generator_step_75000.pt  control_point_generator_step_80000.pt  control_point_generator_step_85000.pt  control_point_generator_step_90000.pt  control_point_generator_step_95000.pt  q_estimator.pt  q_estimator_step_10000.pt  q_estimator_step_100000.pt  q_estimator_step_15000.pt  q_estimator_step_20000.pt  q_estimator_step_25000.pt  q_estimator_step_30000.pt  q_estimator_step_35000.pt  q_estimator_step_40000.pt  q_estimator_step_45000.pt  q_estimator_step_5000.pt  q_estimator_step_50000.pt  q_estimator_step_55000.pt  q_estimator_step_60000.pt  q_estimator_step_65000.pt  q_estimator_step_70000.pt  q_estimator_step_75000.pt  q_estimator_step_80000.pt  q_estimator_step_85000.pt  (+3 more)
checkpoints/dummy/: control_point_generator.pt  control_point_generator_step_10000.pt  control_point_generator_step_100000.pt  control_point_generator_step_15000.pt  control_point_generator_step_20000.pt  control_point_generator_step_25000.pt  control_point_generator_step_30000.pt  control_point_generator_step_35000.pt  control_point_generator_step_40000.pt  control_point_generator_step_45000.pt  control_point_generator_step_5000.pt  control_point_generator_step_50000.pt  control_point_generator_step_55000.pt  control_point_generator_step_60000.pt  control_point_generator_step_65000.pt  control_point_generator_step_70000.pt  control_point_generator_step_75000.pt  control_point_generator_step_80000.pt  control_point_generator_step_85000.pt  control_point_generator_step_90000.pt  control_point_generator_step_95000.pt  q_estimator.pt  q_estimator_step_10000.pt  q_estimator_step_100000.pt  q_estimator_step_15000.pt  q_estimator_step_20000.pt  q_estimator_step_25000.pt  q_estimator_step_30000.pt  q_estimator_step_35000.pt  q_estimator_step_40000.pt  q_estimator_step_45000.pt  q_estimator_step_5000.pt  q_estimator_step_50000.pt  q_estimator_step_55000.pt  q_estimator_step_60000.pt  q_estimator_step_65000.pt  q_estimator_step_70000.pt  q_estimator_step_75000.pt  q_estimator_step_80000.pt  q_estimator_step_85000.pt  (+2 more)
checkpoints/ibc_dfo/: q_estimator.pt  q_estimator_step_10000.pt  q_estimator_step_100000.pt  q_estimator_step_15000.pt  q_estimator_step_20000.pt  q_estimator_step_25000.pt  q_estimator_step_30000.pt  q_estimator_step_35000.pt  q_estimator_step_40000.pt  q_estimator_step_45000.pt  q_estimator_step_5000.pt  q_estimator_step_50000.pt  q_estimator_step_55000.pt  q_estimator_step_60000.pt  q_estimator_step_65000.pt  q_estimator_step_70000.pt  q_estimator_step_75000.pt  (+4 more)
config_json/: config.json  observation_bounds.json
ibc/: __init__.py  ibc_dfo_dummy_testing.py  ibc_dfo_dummy_training.py  ibc_dfo_particle_testing.py  ibc_dfo_particle_training.py  q3c_ibc_dummy_testing.py  q3c_ibc_dummy_training.py
scripts/: download_libero_goal.py  extract_libero_object_states.py  precompute_libero_goal_embs.py  probe_libero_live_obs.py  setup_libero.sh
simulations/: __init__.py  base_simulation.py  door_human_v2_simulation.py  dummy_env.py  dummy_simulation.py  kitchen_simulation.py  libero_goal_pixels_simulation.py  libero_goal_simulation.py  particle_env.py  particle_simulation.py  pen_human_v2_simulation.py  plots.py  pushing_env.py  pushing_multi_env.py  pushing_multi_simulation.py  pushing_pixels_env.py  pushing_pixels_simulation.py  pushing_simulation.py  run_deterministic_particle.py  run_diagnostic_particle.py  run_particle_success_rate_comparison.py  run_simulation.py
tests/: base_test.py  test_pen.py  test_sampling_langevin.py
utils/: d4rl.py  datasets.py  diffusion.py  libero.py  loss.py  models.py  normalizations.py  sampling.py  vis_dummy.py
wandb/: latest-run
(+1937 files in other folders)
