[project]
name = "q3cibc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "gymnasium-robotics>=1.4.2",
    "matplotlib>=3.10.8",
    "minari[all]>=0.5.3",
    "numpy>=2.4.1",
    "tensorflow>=2.20.0",
    "tfrecord>=1.14.6",
    "torch>=2.9.1",
    "wandb>=0.18.0",
]

# Pushing-env-only deps. Kept OUT of the main dependency list so SLURM nodes
# running particle/dummy/pen trials don't have to source-build pybullet —
# pybullet has no cp312 wheels and the SLURM gcc-13.3.0 toolchain fails the
# bullet legacy source with -Werror=maybe-uninitialized. Install locally with
# `uv sync --extra pushing` when working on the IBC Simulated Pushing env.
[project.optional-dependencies]
pushing = [
    "gym==0.26.2",
    "pybullet==3.1.6",
]

# LIBERO-Goal env deps. The embedding encoder (sentence-transformers, default)
# and h5py are listed here. LIBERO itself is NOT here: its setup.py produces a
# broken non-editable wheel (ships only dist-info, empty top_level.txt → the
# `libero` package isn't importable). Install it EDITABLE from a clone instead:
#     git clone https://github.com/Lifelong-Robot-Learning/LIBERO.git ../LIBERO
#     uv pip install --no-deps -e ../LIBERO
#     uv pip install robosuite bddl easydict thop  # LIBERO's runtime deps
# (LIBERO targets python <=3.10 upstream; on this project's 3.12 you may hit
# robosuite/mujoco friction — pin robosuite>=1.4,<1.5 if it mis-resolves.)
libero = [
    "h5py>=3.10",
    "sentence-transformers>=2.2",
    "transformers>=4.30",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

# On SLURM the node's default python is 3.14, but tensorflow 2.20.0 only
# publishes cp312/cp313 wheels. Tell uv to grab its own managed 3.12 rather
# than reuse whatever interpreter happens to be on PATH.
[tool.uv]
python-preference = "managed"
