[project]
name = "q3cibc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "gymnasium-robotics>=1.4.2",
    "matplotlib>=3.10.8",
    "minari[all]>=0.5.3",
    "numpy>=2.4.1",
    "tensorflow>=2.20.0",
    "tfrecord>=1.14.6",
    "torch>=2.9.1",
    "wandb>=0.18.0",
]

# Pushing-env-only deps. Kept OUT of the main dependency list so SLURM nodes
# running particle/dummy/pen trials don't have to source-build pybullet —
# pybullet has no cp312 wheels and the SLURM gcc-13.3.0 toolchain fails the
# bullet legacy source with -Werror=maybe-uninitialized. Install locally with
# `uv sync --extra pushing` when working on the IBC Simulated Pushing env.
[project.optional-dependencies]
pushing = [
    "gym==0.26.2",
    "pybullet==3.1.6",
]

# LIBERO-Goal env deps. LIBERO is referenced as an EDITABLE PATH source (see
# [tool.uv.sources] below) — its own wheel build is broken (ships only dist-info
# because upstream is missing `libero/__init__.py`; we `touch` it in the clone).
# Everything LIBERO needs at runtime is pinned here so `uv sync`/`uv run` keep
# them in the env (out-of-band `uv pip install` gets PRUNED by uv's auto-sync).
# robosuite/gym/bddl/easydict pins match what LIBERO 0.1.0 requires.
libero = [
    "libero",
    "robosuite==1.4.0",
    "bddl==1.0.1",
    "easydict==1.9",
    "gym==0.26.2",
    "numba>=0.59",
    "opencv-python-headless>=4.8",
    "termcolor>=2.0",
    "pynput>=1.7",
    "h5py>=3.10",
    "sentence-transformers>=2.2",
    "transformers>=4.30",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

# On SLURM the node's default python is 3.14, but tensorflow 2.20.0 only
# publishes cp312/cp313 wheels. Tell uv to grab its own managed 3.12 rather
# than reuse whatever interpreter happens to be on PATH.
[tool.uv]
python-preference = "managed"

# LIBERO is installed editable from an in-repo clone (NOT its broken PyPI/git
# wheel). Kept INSIDE the project (gitignored) so everything is self-contained
# and the path resolves the same on every node regardless of the /home vs
# /home1 home-mount alias. The clone must have `libero/__init__.py` (missing
# upstream — `touch third_party/LIBERO/libero/__init__.py` after cloning):
#     git clone https://github.com/Lifelong-Robot-Learning/LIBERO.git third_party/LIBERO
#     touch third_party/LIBERO/libero/__init__.py
[tool.uv.sources]
libero = { path = "third_party/LIBERO", editable = true }
